# DFTMusicVisualization

./: .gitignore  CMakeLists.txt  DFTMusicVisualization  DFTMusicVisualization.c  DFTMusicVisualization.ino  DFTMusicVisualization.py  OpAmp-Simulation.asc  README.md  matrix_test.c  mcp3008.c  mcp3008.h  mp3_dft_visualization.py
AnalogReadArray/: AnalogReadArray.ino
DiscreteFourierTransformation/: USAGE_OF_dft.py  USAGE_of_dft.c  dft.c  dft.h
ProofOfConceptFiles/: DFTMusicVisualization.ino  DFTMusicVisualization.py  FirstWorkingAudioCapture.py  NumpyToWAV.py  REAMDE.md  SampeTest.py  SampleTest.c  analogInputTest.c  analogInputTest.h  matrix_test.c  mp3_dft_visualization.py
ProofOfConceptFiles/USB-Mic-Interface/: DO  ListDevices.py  SampleWave.py
lib/: DO  DO.md
mylib/AlsaAPI/: AlsaAPI.c  AlsaAPI.h
mylib/DiscreteFourierTransformation/c/: USAGE_of_dft.c  build.sh  dft.c  dft.h  dft.i
mylib/DiscreteFourierTransformation/python/: dft.py  plot.py  windowFunctions.py  zeroPadding.py
mylib/matrix/: Matrix.py  matrix.c  matrix.h
mylib/mcp3008/: mcp3008.c  mcp3008.h
